[project]
name            = "twocrypto-ng"
version         = "0.1.0"
authors         = [{ name = "Curve.fi", email = "info@curve.fi" }]
readme          = "README.md"
requires-python = "==3.12.6"

# Requirements
dependencies = [
    "vyper==0.4.1",
    "titanoboa", # Keep this as a placeholder in the dependencies array
    "snekmate==0.1.1",
]

[tool.uv.sources]
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "3e8bc3a29c0d837e99ab666649e77acccf88d494" }

[tool.uv]
dev-dependencies = [
    "pytest-xdist==3.6.1",
    "mamushi==0.0.4",
    "pre-commit==3.8.0",
    "ruff==0.6.9",
    "pytest==8.2.2",
    "plyvel-ci==1.5.1",
    "jupyter==1.0.0",
    "python-dotenv==1.0.1",
    "hypothesis==6.124.2",
    "pandas==2.2.3",
    "matplotlib",
    "numpy>=1.26.4",
    "aiohttp>=3.11.16",
    "web3>=7.10.0",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.5",
    "plotly>=6.0.1",

]

[tool.ruff]
line-length = 100
