[project]
name            = "twocrypto-ng"
version         = "0.1.0"
authors         = [{ name = "Curve.fi", email = "info@curve.fi" }]
readme          = "README.md"
requires-python = ">=3.12"

# Requirements
dependencies = [
    "vyper==0.4.2",
    "titanoboa", # Keep this as a placeholder in the dependencies array
    "snekmate==0.1.2rc1",
]

[tool.uv.sources]
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "ac37ac4925eaf4284dd843ca0fa834e7c44a95a7" }

[tool.uv]
dev-dependencies = [
    "pytest-xdist==3.6.1",
    "mamushi==0.0.4",
    "pre-commit==3.8.0",
    "ruff==0.6.9",
    "pytest==8.2.2",
    "plyvel-ci==1.5.1",
    "jupyter==1.0.0",
    "python-dotenv==1.0.1",
    "hypothesis==6.124.2",
    "pandas==2.2.3",
    "numpy",
    "matplotlib",
]

[tool.ruff]
line-length = 100
